2005-05-07  Bruno coudoin  <bruno.coudoin@free.fr>

	* README.mingw: updated
	* src/gcompris/Makefile.mingw: now the installer works. 
	There is still a major problem with bonuses not working on windows.

2005-05-03  Bruno coudoin  <bruno.coudoin@free.fr>

	Due to the need to support second grade operating sytem that does
	not differentiate a 'a' with a 'A' (windows macos)
	I renamed the chess pieces.

	* boards/chess/B.png:
	* boards/chess/Bb.png:
	* boards/chess/Bk.png:
	* boards/chess/Bn.png:
	* boards/chess/Bp.png:
	* boards/chess/Bq.png:
	* boards/chess/Br.png:
	* boards/chess/K.png:
	* boards/chess/N.png:
	* boards/chess/P.png:
	* boards/chess/Q.png:
	* boards/chess/R.png:
	* boards/chess/WB.png:
	* boards/chess/WK.png:
	* boards/chess/WN.png:
	* boards/chess/WP.png:
	* boards/chess/WQ.png:
	* boards/chess/WR.png:
	* boards/chess/b.png:
	* boards/chess/k.png:
	* boards/chess/n.png:
	* boards/chess/p.png:
	* boards/chess/q.png:
	* boards/chess/r.png:

2005-05-03  Bruno coudoin  <bruno.coudoin@free.fr>

	* config.h.mingw:
	* src/boards/Makefile.mingw:
	* src/boards/algebra.c: fixed board title
	* src/boards/chess.c: (chess_create_item), (move_piece_to): fixed to work with
	sub level operating systems inable to differentiate a 'A' from a 'a'. This was
	creating a bug by having gcompris play black against black only.
	* src/gcompris/board.c: (init_plugins), (board_check_file): added chess.
	fixed it to let boards load on windows. It works on windows again.

2005-05-02  Bruno coudoin  <bruno.coudoin@free.fr>

	various fixed to compiled on Unix again

	* src/boards/python.c: (pythonboard_is_our_board):
	* src/gcompris/board.h:
	* src/gcompris/properties.c: (gcompris_properties_new):

2005-05-02  Bruno coudoin  <bruno.coudoin@free.fr>

	Windows port updated. Not functional yet.
	A new macro has been added to declare a gcompris activity.
	This macro make the declaration for a dynamic link on every
	good enough operating system. On windows, this macro declares